@@ -264,17 +264,27 @@ body:not(.logged-in).woocommerce-login .woocommerce, body:not(.logged-in).conten
 
 .daily-plan-block.week-grid a.week-title[aria-expanded="false"]:after { content: "\f0d7"; font-family: 'FontAwesome'; }
 
-.daily-plan-block.week-grid .week-row .week-row-inner { display: -ms-flexbox; display: flex; -ms-flex-pack: justify; justify-content: space-between; -ms-flex-align: center; align-items: center; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.daily-plan-block.week-grid .week-row .week-row-inner { display: -ms-flexbox; display: flex; -ms-flex-pack: justify; justify-content: space-between; }
 
-.daily-plan-block.week-grid .week-row .week-row-inner .day { background: none; }
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box { padding-right: 5px; }
 
-.daily-plan-block.week-grid .week-row .week-row-inner .day:not(.completed) { border: 3px solid #418ad0; border-radius: 50px; height: 100px; width: 100px; background: rgba(65, 138, 208, 0.3); text-align: center; display: -ms-flexbox; display: flex; -ms-flex-pack: center; justify-content: center; }
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box h3 { background-color: #f6f6f6; padding: 10px 16px; margin-bottom: 16px; }
 
-.daily-plan-block.week-grid .week-row .week-row-inner .day:hover:not(.completed) { background: #418ad0; }
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner { display: -ms-flexbox; display: flex; -ms-flex-pack: justify; justify-content: space-between; -ms-flex-align: center; align-items: center; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
-.daily-plan-block.week-grid .week-row .week-row-inner .day:hover:not(.completed) .plan-content { color: #ffffff; }
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner .day { background: none; }
 
-.daily-plan-block.week-grid .week-row .week-row-inner .day .plan-content { font-family: 'Noto Sans', sans-serif; font-weight: 300; text-transform: uppercase; }
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner .day:not(.completed) { border: 4px solid #418ad0; border-radius: 50px; height: 75px; width: 75px; margin-right: 5px; background: rgba(65, 138, 208, 0.3); text-align: center; display: -ms-flexbox; display: flex; -ms-flex-pack: center; justify-content: center; }
+
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner .day:not(.completed) .plan-content { font-size: 18px; }
+
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner .day:hover:not(.completed) { background: #418ad0; }
+
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner .day:hover:not(.completed) .plan-content { color: #ffffff; }
+
+.daily-plan-block.week-grid .week-row .week-row-inner .week-meals-recipes-box .week-meals-recipes-box-inner .day .plan-content { font-family: 'Noto Sans', sans-serif; font-weight: 300; text-transform: uppercase; }
+
+.daily-plan-block.week-grid .week-row .week-row-inner .week-download-box { background-color: #f6f6f6; padding: 10px 16px; margin-bottom: 5px; }
 
 #edit-account-tab { padding: 35px 20px 20px; max-width: 1140px; width: 100%; margin: 20px auto 140px; }
 
