@@ -2,6 +2,7 @@
 
 ### 1.3.0 (In development)
 * Fix - Changing all the kg's and cm's in the detail boxes to just kg and cm (no plural).
+* Dev - Added a download list to the weekly plan block.
 
 ### 1.2.0 - 19 December 2019
 * Dev - Added in translatable endpoint settings.
